--- a/layouts/partials/home/extensions.html
+++ b/layouts/partials/home/extensions.html
@@ -1,14 +1,14 @@
 <div align="center">
-<p>Hi! I'm a social technologist and policy expert based in London.</p>
+<p>Hi! I'm a software engineer and tech policy expert based in London.</p>
 </div>
 <div align="left">
-<p>I'm currently focused on privacy engineering, the democratisation of AI, and algorithmic auditing, primarily through my work with <a href="https://www.openmined.org/">OpenMined</a> - a tech non-profit building open source governance infrastructure using privacy enhancing technologies to help researchers access AI systems and datasets.</p>
+<p>My current focus is on privacy engineering, data governance, and algorithmic auditing, primarily through my work with <a href="https://www.openmined.org/">OpenMined</a> - a tech non-profit building open source AI governance infrastructure using privacy enhancing technologies that helps researchers access AI systems and datasets to study AI's impact on the world.</p>
 
-<p>Previously, I was Senior Technology Adviser at the <a href="https://www.gov.uk/government/organisations/centre-for-data-ethics-and-innovation">Centre for Data Ethics and Innovation</a>, an independent expert body responsible for leading the UK government's work to develop ethical and responsible AI. I led CDEI's work on privacy enhancing technologies, including delivery of the <a href="https://petsprizechallenges.com">UK-US PETs prize challenges</a> in collaboration with the <a href="https://www.whitehouse.gov/ostp/">White House OSTP</a>, <a href="https://www.nist.gov/">NIST</a>, and <a href="https://www.nsf.gov/">NSF</a>. I was also a member of the <a href="https://unstats.un.org/bigdata/task-teams/privacy/index.cshtml">United Nations Privacy Task Team</a>, and was a co-editor of the <a href="https://unstats.un.org/bigdata/task-teams/privacy/guide/index.cshtml">2023 UN PET Guide</a>.</p>
+<p>Previously, I was Senior Technology Adviser at the <a href="https://www.gov.uk/government/organisations/centre-for-data-ethics-and-innovation">Centre for Data Ethics and Innovation</a>, an independent expert body responsible for leading the UK government's work to develop ethical and responsible AI. I led CDEI's work on privacy enhancing technologies, including the <a href="https://petsprizechallenges.com">UK-US PETs prize challenges</a> in collaboration with the <a href="https://www.whitehouse.gov/ostp/">White House OSTP</a>, <a href="https://www.nist.gov/">NIST</a>, and <a href="https://www.nsf.gov/">NSF</a>. I was also a member of the <a href="https://unstats.un.org/bigdata/task-teams/privacy/index.cshtml">United Nations Privacy Task Team</a>, and was a co-editor of the <a href="https://unstats.un.org/bigdata/task-teams/privacy/guide/index.cshtml">2023 UN PET Guide</a>.</p>
 
 <p>Before shifting to policy, I worked in various software engineering and data science roles in the private sector. I have a Masters in Physics from the University of Oxford, and a Masters in Digital Culture and Society from King's College London.</p>
 
-I am always eager to collaborate with others working in this space. <a href="mailto:davebuckley34@gmail.com">Get in touch</a> if you:
+I am always eager to collaborate with others working in this space. <a href="mailto:davebuckleyconsulting@gmail.com">Get in touch</a> if you:
 <li>have an interesting project you're interested in collaborating on</li>
 <li>are searching for speakers for tech events and conferences</li>
 <li>are looking for consulting services to support data governance, tech policy, or responsible AI projects</li>
